--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-firebase" version="2.0.5"
+<plugin id="cordova-plugin-firebase" version="2.0.6"
 xmlns="http://apache.org/cordova/ns/plugins/1.0"
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<name>Google Firebase Plugin</name>
@@ -56,10 +56,10 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 
 		<framework src="src/android/build.gradle" custom="true" type="gradleReference" />
 		<framework src="com.google.android.gms:play-services-tagmanager:+" />
-		<framework src="com.google.firebase:firebase-core:+" />
-		<framework src="com.google.firebase:firebase-messaging:+" />
-		<framework src="com.google.firebase:firebase-config:+" />
-		<framework src="com.google.firebase:firebase-perf:+" />
+		<framework src="com.google.firebase:firebase-core:16.0.8" />
+		<framework src="com.google.firebase:firebase-messaging:17.5.0" />
+		<framework src="com.google.firebase:firebase-config:16.4.1" />
+		<framework src="com.google.firebase:firebase-perf:16.2.4" />
 	</platform>
 
 	<platform name="ios">
